tests/NormalTests/paczka1/fuzzy1/59799487.err
Error in line 3: Ft9Brls A986 84,3
Error in line 11: Ft9Brls A4 54,1
Error in line 24: he8MU A48 86,4
Error in line 31: Ft9Brls A48 66,2
